force-app/main/default/objects/Movimiento_Seleccionado__c/Movimiento_Seleccionado__c.object-meta.xml
<CustomObject>
    <label>Movimiento Seleccionado</label>
    <nameField>
        <label>Nombre de Movimiento Seleccionado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movimientos Seleccionados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>