force-app/main/default/objects/Movimiento_Seleccionado__c/fields/Comision_por_aporte__c.field-meta.xml
<CustomField>
    <fullName>Comision_por_aporte__c</fullName>
    <label>Comision por aporte</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>