force-app/main/default/objects/Movimiento_Seleccionado__c/fields/Comision_por_saldo__c.field-meta.xml
<CustomField>
    <fullName>Comision_por_saldo__c</fullName>
    <label>Comision por saldo</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>