force-app/main/default/objects/Movimiento_Seleccionado__c/fields/Detalle_caso__c.field-meta.xml
<CustomField>
    <fullName>Detalle_caso__c</fullName>
    <label>Detalle caso</label>
    <referenceTo>Detalle_caso__c</referenceTo>
    <relationshipLabel>Movimientos Seleccionados</relationshipLabel>
    <relationshipName>Movimientos_Seleccionados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>