force-app/main/default/objects/Movimiento_Seleccionado__c/fields/Saldo_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Inicial__c</fullName>
    <label>Saldo Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>