force-app/main/default/objects/Movimiento_Seleccionado__c/fields/Tipo_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Saldo__c</fullName>
    <label>Tipo Saldo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_saldo</valueSetName>
    </valueSet>
</CustomField>