force-app/main/default/objects/Movimiento_Seleccionado__c/fields/Valor_Cuota__c.field-meta.xml
<CustomField>
    <fullName>Valor_Cuota__c</fullName>
    <label>Valor Cuota</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>